--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ filelock==3.8.0
 frozenlist==1.3.1
 geographiclib==1.52
 geopy==2.2.0
+gunicorn==20.1.0
 idna==3.4
 install==1.3.5
 marshmallow==3.18.0
